DEV_001: [WIP] Gestión remota de usuarios en proceso, falta probar las llamadas en el servidor e implementar la pantalla horizontal de login y registro.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -16,4 +16,8 @@
     <string name="repetir_contraseña">Repeat the password</string>
     <string name="registrar">Register</string>
     <string name="hecho">Done</string>
+    <string name="credenciales_incorrectas">Wrong credentials. Are you registered?</string>
+    <string name="no_campos_vacios">No empty fields allowed!</string>
+    <string name="contraseñas_no_concuerdan">Passwords do not match. Please, make sure that they do.</string>
+    <string name="usuario_ya_existe">This username is taken. Please, choose one that\'s still available.</string>
 </resources>
