--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Grupal_Android</string>
+    <string name="noPer">Necesitas otorgar el permiso de la ubicacion para ver ubicaciones cerca tuyo</string>
+    <string name="falloUbi">Fallo con la ubicacion</string>
+
 </resources>
