--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -22,4 +22,6 @@
     <string name="usuario_ya_existe">Este nombre de usuario está cogido. Por favor, elige uno que todavía esté disponible.</string>
     <string name="new_signup">Nuevo registro</string>
     <string name="has_been_registered">Un nuevo usuario ha sido registrado en el sistema</string>
+    <string name="noPer">Necesitas otorgar el permiso de la ubicacion para ver ubicaciones cerca tuyo</string>
+    <string name="falloUbi">Fallo con la ubicacion</string>
 </resources>
