--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="español">Español</string>
     <string name="titulo_dialogo_preferencias_idioma">Elige un idioma</string>
     <string name="resumen_preferencias_idioma">Selecciona el idioma de la aplicación</string>
-    <string name="usuario">Usuario</string>
-    <string name="contraseña">Contraseña</string>
+    <string name="usuario">Necesitas otorgar el permiso de la ubicacion para ver ubicaciones cerca tuyo</string>
+    <string name="contraseña">Fallo con la ubicacion</string>
     <string name="login">Login</string>
     <string name="link_registro_texto"><u>¿No estás registrado? puedes hacerlo aquí</u></string>
     <string name="meter_usuario">Introduce un usuario</string>
@@ -21,4 +21,6 @@
     <string name="usuario_ya_existe">Este nombre de usuario está cogido. Por favor, elige uno que todavía esté disponible.</string>
     <string name="new_signup">Nuevo registro</string>
     <string name="has_been_registered">Un nuevo usuario ha sido registrado en el sistema</string>
+    <string name="noPer">Necesitas otorgar el permiso de la ubicacion para ver ubicaciones cerca tuyo</string>
+    <string name="falloUbi">Fallo con la ubicacion</string>
 </resources>
