--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -24,4 +24,5 @@
     <string name="has_been_registered">A new user has been registered in the system</string>
     <string name="noPer">You have to grant the permisson of ubication to see the ubications near you</string>
     <string name="falloUbi">The ubication has failed</string>
+    <string name="tipo">Type</string>
 </resources>
