--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -25,4 +25,6 @@
     <string name="noPer">Necesitas otorgar el permiso de la ubicacion para ver ubicaciones cerca tuyo</string>
     <string name="falloUbi">Fallo con la ubicacion</string>
     <string name="tipo">Tipo</string>
+    <string name="musica">Música</string>
+    <string name="musicaActiva">Active music?</string>
 </resources>
