--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -26,5 +26,5 @@
     <string name="falloUbi">The ubication has failed</string>
     <string name="tipo">Type</string>
     <string name="musica">Music</string>
-    <string name="musicaActiva">¿Música activa?</string>
+    <string name="musicaActiva">Active music?</string>
 </resources>
