--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -27,4 +27,5 @@
     <string name="tipo">Type</string>
     <string name="musica">Music</string>
     <string name="musicaActiva">Active music?</string>
+    <string name="map">Map</string>
 </resources>
