--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -27,4 +27,5 @@
     <string name="tipo">Tipo</string>
     <string name="musica">Música</string>
     <string name="musicaActiva">¿Música activa?</string>
+    <string name="map">Mapa</string>
 </resources>
