--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="tipo">Tipo</string>
     <string name="musica">Música</string>
     <string name="musicaActiva">"¿Música activa?"</string>
+    <string name="map">Mapa</string>
 
 </resources>
